# app/http/handler/user.go
@@ -9,6 +9,16 @@ import (
 	"github.com/Housiadas/backend-system/business/web"
 )
 
+// User godoc
+// @Summary      Crete User
+// @Description  Create a new user
+// @Tags 		 User
+// @Accept       json
+// @Produce      json
+// @Param        request body userapp.NewUser true "User data"
+// @Success      200  {object}  userapp.User
+// @Failure      500  {object}  errs.Error
+// @Router       /user [post]
 func (h *Handler) userCreate(ctx context.Context, _ http.ResponseWriter, r *http.Request) web.Encoder {
 	var app userapp.NewUser
 	if err := web.Decode(r, &app); err != nil {
@@ -23,6 +33,16 @@ func (h *Handler) userCreate(ctx context.Context, _ http.ResponseWriter, r *http
 	return usr
 }
 
+// User godoc
+// @Summary      Update User
+// @Description  Update an existing user
+// @Tags 		 User
+// @Accept       json
+// @Produce      json
+// @Param        request body userapp.UpdateUser true "User data"
+// @Success      200  {object}  userapp.User
+// @Failure      500  {object}  errs.Error
+// @Router       /user/{user_id} [put]
 func (h *Handler) userUpdate(ctx context.Context, _ http.ResponseWriter, r *http.Request) web.Encoder {
 	var app userapp.UpdateUser
 	if err := web.Decode(r, &app); err != nil {
@@ -37,6 +57,16 @@ func (h *Handler) userUpdate(ctx context.Context, _ http.ResponseWriter, r *http
 	return usr
 }
 
+// User godoc
+// @Summary      Update User's role
+// @Description  Update user's role
+// @Tags 		 User
+// @Accept       json
+// @Produce      json
+// @Param        request body userapp.UpdateUserRole true "User data"
+// @Success      200  {object}  userapp.User
+// @Failure      500  {object}  errs.Error
+// @Router       /user/role/{user_id} [put]
 func (h *Handler) updateRole(ctx context.Context, _ http.ResponseWriter, r *http.Request) web.Encoder {
 	var app userapp.UpdateUserRole
 	if err := web.Decode(r, &app); err != nil {
@@ -51,6 +81,15 @@ func (h *Handler) updateRole(ctx context.Context, _ http.ResponseWriter, r *http
 	return usr
 }
 
+// User godoc
+// @Summary      Delete a user
+// @Description  Delete a user
+// @Tags 		 User
+// @Accept       json
+// @Produce      json
+// @Success      204
+// @Failure      500  {object}  errs.Error
+// @Router       /user/{user_id} [delete]
 func (h *Handler) userDelete(ctx context.Context, _ http.ResponseWriter, _ *http.Request) web.Encoder {
 	if err := h.App.User.Delete(ctx); err != nil {
 		return errs.NewError(err)
@@ -59,6 +98,15 @@ func (h *Handler) userDelete(ctx context.Context, _ http.ResponseWriter, _ *http
 	return nil
 }
 
+// User godoc
+// @Summary      Query Users
+// @Description  Search users in database based on criteria
+// @Tags		 User
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  userapp.UserPageResult
+// @Failure      500  {object}  errs.Error
+// @Router       /user [get]
 func (h *Handler) userQuery(ctx context.Context, _ http.ResponseWriter, r *http.Request) web.Encoder {
 	qp := userapp.ParseQueryParams(r)
 
@@ -70,6 +118,15 @@ func (h *Handler) userQuery(ctx context.Context, _ http.ResponseWriter, r *http.
 	return usr
 }
 
+// User godoc
+// @Summary      Find User by id
+// @Description  Search user in database by id
+// @Tags		 User
+// @Accept       json
+// @Produce      json
+// @Success      200  {object}  userapp.User
+// @Failure      500  {object}  errs.Error
+// @Router       /user/{user_id} [get]
 func (h *Handler) userQueryByID(ctx context.Context, _ http.ResponseWriter, _ *http.Request) web.Encoder {
 	usr, err := h.App.User.QueryByID(ctx)
 	if err != nil {
